--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>TERMS AND CONDITIONS</title>
+        <title>SYARAT DAN KETENTUAN</title>
         <link rel="icon" type="image/x-icon" href="../logo.png">
         <!-- About Web -->
         <meta name="description" content="Harap baca syarat dan ketentuan ini dengan seksama sebelum menggunakan Layanan Kami.">
@@ -13,7 +13,7 @@
         <meta name="robots" content="noindex,nofollow">
         <meta name="googlebot-news" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
         <!-- Meta SEO -->
-        <meta property="og:title" content="TERMS AND CONDITIONS">
+        <meta property="og:title" content="SYARAT DAN KETENTUAN">
         <meta property="og:url" content="https://darkcluemusic.github.io/terms-and-conditions/">
         <meta property="og:description" content="Harap baca syarat dan ketentuan ini dengan seksama sebelum menggunakan Layanan Kami.">
         <meta property="og:image" content="../logo.png">
