--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <!-- Meta SEO -->
         <meta property="og:title" content="SYARAT DAN KETENTUAN">
         <meta property="og:url" content="https://darkcluemusic.github.io/terms-and-conditions/">
+        <meta property="og:type" content="website">
         <meta property="og:description" content="Harap baca syarat dan ketentuan ini dengan seksama sebelum menggunakan Layanan Kami.">
         <meta property="og:image" content="../logo.png">
         <link rel="canonical" href="https://darkcluemusic.github.io/terms-and-conditions/">
@@ -35,17 +36,17 @@
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-W031KBWLW2"></script>
         <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
         
-          gtag('config', 'G-W031KBWLW2');
+            gtag('config', 'G-W031KBWLW2');
         </script>
     </head>
     <body id="myCopyright">
         <header>
             <div class="header">
-                <a href="../" title="Dark Clue Music">
+                <a href="" title="Dark Clue Music">
                     <h1 class="anton-regular">Dark Clue Music</h1>
                 </a>
                 <div class="menu-container" onclick="myFunction(this)">
@@ -180,6 +181,6 @@
             </div>
         </footer>
         <script type="text/javascript" src="../assets/js/main/index.js"></script>
-        <script type="text/javascript" src="https://darkcluemusic.github.io/assets/js/disclaimer/index.js"></script>
+        <script type="text/javascript" src="../assets/js/disclaimer/index.js"></script>
     </body>
 </html>
