--- a/index.html
+++ b/index.html
@@ -64,97 +64,8 @@
                     <a href="../privacy-policy" title="Kebijakan Privasi" class="pb10">Kebijakan Privasi</a>
                 </div>
                 <div class="msection">
-                    <h1>Syarat & Ketentuan</h1>
-                    <p>Terakhir diperbarui: October 01, 2024</p><br/>
-                    <p>Harap baca syarat dan ketentuan ini dengan seksama sebelum menggunakan Layanan Kami.</p><br/>
-                    <h2>Interpretasi dan Definisi</h2><br/>
-                    <h3>Interpretasi</h3>
-                    <p>Kata-kata yang huruf awalnya diawali dengan huruf kapital mempunyai arti yang ditetapkan dalam kondisi berikut. Definisi berikut akan mempunyai arti yang sama tanpa memandang apakah kata-kata tersebut muncul dalam bentuk tunggal atau jamak.</p><br/>
-                    <h3>Definisi</h3>
-                    <p>Untuk tujuan Syarat dan Ketentuan ini:</p>
-                    <ul>
-                        <li>
-                            <p><strong>Aplikasi</strong> berarti program perangkat lunak yang disediakan oleh Organisasi yang diunduh oleh anda pada perangkat elektronik apa pun, bernama Dark Clue Music</p>
-                        </li>
-                        <li>
-                            <p><strong>Aplikasi Store</strong> berarti layanan distribusi digital yang dioperasikan dan dikembangkan oleh Apple Inc. (Apple App Store) atau Google Inc. (Google Play Store) tempat Aplikasi telah diunduh.</p>
-                        </li>
-                        <li>
-                            <p><strong>Afiliasi</strong> berarti suatu badan usaha yang mengendalikan, dikendalikan oleh, atau berada di bawah pengendalian bersama dengan suatu pihak, dimana&quot;kontrol&quot; berarti kepemilikan 50% atau lebih saham, kepentingan ekuitas atau sekuritas lain yang berhak memberikan suara dalam pemilihan direktur atau otoritas pengelola lainnya.</p>
-                        </li>
-                        <li>
-                            <p><strong>Negara</strong> mengacu pada: Indonesia</p>
-                        </li>
-                        <li>
-                            <p><strong>Organisasi</strong> (disebut sebagai &quot;Organisasi&quot;, &quot;Kami&quot; or &quot;Kita&quot; dalam Perjanjian ini) mengacu pada Dark Clue Music.</p>
-                        </li>
-                        <li>
-                            <p><strong>Perangkat</strong> berarti perangkat apa pun yang dapat mengakses Layanan seperti komputer, ponsel, atau tablet digital.</p>
-                        </li>
-                        <li>
-                            <p><strong>Melayani</strong> mengacu pada Aplikasi atau Situs Web atau keduanya.</p>
-                        </li>
-                        <li>
-                            <p><strong>Syarat & Ketentuan</strong> (juga disebut sebagai "Ketentuan") berarti Ketentuan dan Kondisi ini yang membentuk keseluruhan perjanjian antara anda dan Organisasi mengenai penggunaan Layanan.</p>
-                        </li>
-                        <li>
-                            <p><strong>Layanan Media Sosial Pihak Ketiga</strong> berarti layanan atau konten apa pun (termasuk data, informasi, produk, atau layanan) yang disediakan oleh pihak ketiga yang dapat ditampilkan, disertakan, atau disediakan oleh Layanan.</p>
-                        </li>
-                        <li>
-                            <p><strong>Situs web</strong> mengacu pada Dark Clue Music, dapat diakses dari <a href="https://darkcluemusic.github.io" rel="external nofollow noopener" target="_blank">https://darkcluemusic.github.io</a></p>
-                        </li>
-                        <li>
-                            <p><strong>Anda</strong> berarti individu yang mengakses atau menggunakan Layanan, atau Organisasi, atau badan hukum lain yang atas namanya individu tersebut mengakses atau menggunakan Layanan, sebagaimana berlaku.</p>
-                        </li>
-                    </ul>
-                    <h2>Pengakuan</h2>
-                    <p>Berikut adalah Syarat dan Ketentuan yang mengatur penggunaan Layanan ini dan perjanjian yang berlaku antara Anda dan Organisasi. Syarat dan Ketentuan ini menetapkan hak dan kewajiban semua pengguna terkait penggunaan Layanan.</p>
-                    <p>Akses dan penggunaan Layanan oleh Anda bergantung pada penerimaan dan kepatuhan Anda terhadap Syarat dan Ketentuan ini. Syarat dan Ketentuan ini berlaku untuk semua pengunjung, pengguna, dan orang lain yang mengakses atau menggunakan Layanan.</p>
-                    <p>Dengan mengakses atau menggunakan Layanan, Anda setuju untuk terikat oleh Syarat dan Ketentuan ini. Jika Anda tidak setuju dengan bagian mana pun dari Syarat dan Ketentuan ini, Anda tidak boleh mengakses Layanan.</p>
-                    <p>Anda menyatakan bahwa Anda berusia di atas 18 tahun. Organisasi tidak mengizinkan mereka yang berusia di bawah 18 tahun untuk menggunakan Layanan.</p>
-                    <p>Akses dan penggunaan Layanan oleh Anda juga bergantung pada penerimaan dan kepatuhan Anda terhadap Kebijakan Privasi Organisasi. Kebijakan Privasi kami menjelaskan kebijakan dan prosedur kami mengenai pengumpulan, penggunaan, dan pengungkapan informasi pribadi Anda saat Anda menggunakan Aplikasi atau Situs Web dan memberi tahu Anda tentang hak privasi Anda dan bagaimana hukum melindungi Anda. Harap baca Kebijakan Privasi kami dengan saksama sebelum menggunakan Layanan kami.</p><br/>
-                    <h2>Tautan ke Situs Web Lain</h2>
-                    <p>Layanan kami mungkin berisi tautan ke situs web atau layanan pihak ketiga yang tidak dimiliki atau dikendalikan oleh Organisasi.</p>
-                    <p>Organisasi tidak memiliki kendali atas, dan tidak bertanggung jawab atas, konten, kebijakan privasi, atau praktik situs web atau layanan pihak ketiga mana pun. Anda selanjutnya mengakui dan setuju bahwa Organisasi tidak akan bertanggung jawab atau berkewajiban, secara langsung atau tidak langsung, atas segala kerusakan atau kerugian yang disebabkan atau diduga disebabkan oleh atau sehubungan dengan penggunaan atau ketergantungan pada konten, barang, atau layanan apa pun yang tersedia di atau melalui situs web atau layanan tersebut.</p>
-                    <p>Kami sangat menyarankan Anda untuk membaca syarat dan ketentuan serta kebijakan privasi situs web atau layanan pihak ketiga mana pun yang Anda kunjungi.</p><br/>
-                    <h2>Penghentian</h2>
-                    <p>Kami dapat menghentikan atau menangguhkan akses Anda segera, tanpa pemberitahuan atau tanggung jawab sebelumnya, dengan alasan apa pun, termasuk namun tidak terbatas pada jika Anda melanggar Persyaratan dan Ketentuan ini.</p>
-                    <p>Setelah penghentian, hak Anda untuk menggunakan Layanan akan segera berakhir.</p><br/>
-                    <h2>Batasan Tanggung Jawab</h2>
-                    <p>Sejauh diizinkan oleh hukum yang berlaku, dalam keadaan apa pun Organisasi atau pemasoknya tidak akan bertanggung jawab atas segala kerusakan khusus, insidental, tidak langsung, atau konsekuensial apa pun (termasuk, namun tidak terbatas pada, kerusakan atas hilangnya keuntungan, hilangnya data atau informasi lainnya, untuk gangguan bisnis, untuk cedera pribadi, hilangnya privasi yang timbul dari atau dengan cara apa pun terkait dengan penggunaan atau ketidakmampuan untuk menggunakan Layanan, perangkat lunak pihak ketiga dan/atau perangkat keras pihak ketiga yang digunakan dengan Layanan, atau yang terkait dengan ketentuan apa pun dari Persyaratan ini), bahkan jika Organisasi atau pemasok mana pun telah diberitahu tentang kemungkinan kerusakan tersebut dan bahkan jika pemulihan gagal dari tujuan utamanya.</p>
-                    <p>Beberapa negara bagian tidak mengizinkan pengecualian jaminan tersirat atau pembatasan tanggung jawab atas kerusakan insidental atau konsekuensial, yang berarti bahwa beberapa batasan di atas mungkin tidak berlaku. Di negara bagian ini, tanggung jawab masing-masing pihak akan dibatasi hingga batas yang diizinkan oleh hukum.</p><br/>
-                    <h2>&quot;DENGAN ADANYA&quot; Dan &quot;SEBAGAIMANA TERSEDIA&quot; Penafian</h2>
-                    <p>Layanan ini diberikan kepada Anda &quot;DENGAN ADANYA&quot; Dan &quot;SEBAGAIMANA TERSEDIA&quot; dan dengan semua kesalahan dan cacat tanpa jaminan dalam bentuk apa pun. Hingga batas maksimum yang diizinkan berdasarkan hukum yang berlaku, Organisasi, atas namanya sendiri dan atas nama Afiliasinya dan masing-masing pemberi lisensi dan penyedia layanannya, secara tegas menyangkal semua jaminan, baik tersurat, tersirat, menurut undang-undang atau lainnya, sehubungan dengan Layanan, termasuk semua jaminan tersirat tentang kelayakan untuk diperjualbelikan, kesesuaian untuk tujuan tertentu, hak milik dan non-pelanggaran, dan jaminan yang mungkin timbul dari proses transaksi, proses kinerja, penggunaan atau praktik perdagangan. Tanpa batasan pada hal tersebut di atas, Organisasi tidak memberikan jaminan atau pernyataan, dan tidak membuat pernyataan dalam bentuk apa pun bahwa Layanan akan memenuhi persyaratan Anda, mencapai hasil yang diinginkan, kompatibel atau bekerja dengan perangkat lunak, aplikasi, sistem atau layanan lain, beroperasi tanpa gangguan, memenuhi standar kinerja atau keandalan atau bebas dari kesalahan atau bahwa kesalahan atau cacat apa pun dapat atau akan diperbaiki.</p>
-                    <p>Tanpa membatasi hal-hal tersebut di atas, baik Organisasi maupun penyedia Organisasi mana pun tidak membuat pernyataan atau jaminan apa pun, tersurat maupun tersirat: (i) sehubungan dengan pengoperasian atau ketersediaan Layanan, atau informasi, konten, dan materi atau produk yang disertakan di dalamnya; (ii) bahwa Layanan tidak akan terganggu atau bebas dari kesalahan; (iii) sehubungan dengan keakuratan, keandalan, atau keberlakuan informasi atau konten apa pun yang disediakan melalui Layanan; atau (iv) bahwa Layanan, servernya, konten, atau email yang dikirim dari atau atas nama Organisasi bebas dari virus, skrip, trojan horse, worm, malware, timebomb, atau komponen berbahaya lainnya.</p>
-                    <p>Beberapa yurisdiksi tidak memperbolehkan pengecualian jenis jaminan atau batasan tertentu pada hak konsumen yang berlaku menurut undang-undang, sehingga beberapa atau semua pengecualian dan batasan di atas mungkin tidak berlaku bagi Anda. Namun dalam kasus seperti itu, pengecualian dan batasan yang ditetapkan dalam bagian ini akan diterapkan sejauh yang dapat diberlakukan menurut hukum yang berlaku.</p><br/>
-                    <h2>Hukum Yang Mengatur</h2>
-                    <p>Hukum Negara, kecuali aturan hukum yang bertentangan, akan mengatur Ketentuan ini dan penggunaan Layanan oleh Anda. Penggunaan Aplikasi oleh Anda juga dapat tunduk pada hukum lokal, negara bagian, nasional, atau internasional lainnya.</p><br/>
-                    <h2>Penyelesaian Sengketa</h2>
-                    <p>Jika anda memiliki masalah atau perselisihan tentang Layanan, anda setuju untuk terlebih dahulu mencoba menyelesaikan perselisihan tersebut secara informal dengan menghubungi Organisasi.</p><br/>
-                    <h2>Untuk Pengguna Uni Eropa (UE)</h2>
-                    <p>Jika anda adalah konsumen Uni Eropa, Anda akan mendapatkan manfaat dari ketentuan wajib hukumnya di negara tempat anda tinggal.</p><br/>
-                    <h2>Kepatuhan Hukum Amerika Serikat</h2>
-                    <p>Anda menyatakan dan menjamin bahwa (i) Anda tidak berlokasi di negara yang dikenai embargo pemerintah Amerika Serikat, atau yang telah ditetapkan oleh pemerintah Amerika Serikat sebagai negara "pendukung teroris", dan (ii) Anda tidak tercantum dalam daftar pihak terlarang atau terbatas pemerintah Amerika Serikat mana pun.</p><br/>
-                    <h2>Keterpisahan dan Pengabaian</h2><br/>
-                    <h3>Keterpisahan</h3>
-                    <p>Jika ada ketentuan dalam Persyaratan ini yang dianggap tidak dapat dilaksanakan atau tidak sah, ketentuan tersebut akan diubah dan ditafsirkan untuk mencapai tujuan ketentuan tersebut semaksimal mungkin berdasarkan hukum yang berlaku, dan ketentuan lainnya akan tetap berlaku penuh.</p><br/>
-                    <h3>Pengabaian</h3>
-                    <p>Kecuali sebagaimana disediakan di sini, kegagalan untuk menjalankan hak atau mensyaratkan pelaksanaan kewajiban berdasarkan Ketentuan ini tidak akan memengaruhi kemampuan salah satu pihak untuk menjalankan hak tersebut atau mensyaratkan pelaksanaan tersebut di kemudian hari, dan pengesampingan pelanggaran tidak akan dianggap sebagai pengesampingan pelanggaran berikutnya.</p><br/>
-                    <h2>Terjemahan Interpretasi</h2>
-                    <p>Persyaratan dan Ketentuan ini mungkin telah diterjemahkan jika Kami telah menyediakannya untuk Anda melalui Layanan kami. Anda setuju bahwa teks asli dalam bahasa Inggris akan berlaku jika terjadi perselisihan.</p><br/>
-                    <h2>Perubahan pada Syarat dan Ketentuan Ini</h2>
-                    <p>Kami berhak, atas kebijakan Kami sendiri, untuk mengubah atau mengganti Ketentuan ini kapan saja. Jika revisi tersebut penting, Kami akan melakukan upaya yang wajar untuk memberikan pemberitahuan setidaknya 30 hari sebelum ketentuan baru berlaku. Apa yang dianggap sebagai perubahan penting akan ditentukan atas kebijakan Kami sendiri.</p>
-                    <p>Dengan terus mengakses atau menggunakan Layanan Kami setelah revisi tersebut berlaku, Anda setuju untuk terikat oleh ketentuan yang direvisi. Jika Anda tidak setuju dengan ketentuan baru, secara keseluruhan atau sebagian, harap hentikan penggunaan situs web dan Layanan.</p><br/>
-                    <h2>Hubungi kami</h2>
-                    <p>Jika anda memiliki pertanyaan tentang Syarat dan Ketentuan ini, anda dapat menghubungi kami:</p>
-                    <ul>
-                        <li>
-                            <p>Melalui email: darkcluemusic@gmail.com</p>
-                        </li>
-                        <li>
-                            <p>Melalui nomor telepon: 0852-1125-4956</p>
-                        </li>
-                    </ul>
+                    <h1>Perbaikan</h1><br/>
+                    <p>Maaf untuk sementara ini kami sedang memperbaharui Syarat & Ketentuan.</p>
                 </div>              
             </article>
         </main>
