--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h1 id="dcmplayer">DCM Player</h1><br/>
                     <p>DCM Player adalah wadah musik yang di bagikan oleh pengguna untuk pengguna atau pengunjung lainnya, seperti player musik pada umumnya DCM Player memiliki kontrol musik yang sama, DCM Player mengunggulkan musik yang menampilkan lirik selain itu pengguna dapat dengan bebas mengubah/mangatur tampilan sesuai dengan apa yang sudah disediakan contoh mengganti latar dengan foto atau warna, mengunggah musik dll. Untuk mendapatkan fitur tersebut pengguna harus membuat akun dan mentaati aturan yang ada seperti, tidak mengakui hak cipta karya musik seseorang, mengarang lirik berbeda dari versi aslinya dan lain sebagainya yang dapat merugikan orang lain (Hukum berlaku secara personal).</p><br/>
                     <h1>Taat Hukum</h1><br/>
-                    <p>Dark Clue Music (DCM) sangat taat/tunduk dengan hukum yang berlaku di negara, khususnya negara kami Indonesia. Selepas dari itu kami akan selalu mengingatkan tentang UUD 1945, Pasal 28 A sampai dengan 28 J</p><br/>
+                    <p>Dark Clue Music (DCM) sangat taat/tunduk dengan hukum yang berlaku di negara, khususnya negara kami Indonesia. Selepas dari itu kami akan selalu mengingatkan tentang UUD 1945, Pasal 28.</p><br/>
                     <h1>Hukuman</h1><br/>
                     <p>Kami memiliki cara tersendiri untuk menghukum pengguna yang menyalahgunakan alat berbasis online kami seperti misal pengguna mengakui hak cipta karya/musik orang lain, dengan tegas kami akan memblokir pengguna dan menghapus lagu serta memberikan informasi yang dicatat tentang pengguna ke pemilik/pihak yang merasa dirugikan.</p>
                 </div>              
