--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <h1>Syarat & Ketentuan</h1>
                     <p>Terakhir diperbarui: October 02, 2024</p><br/>
                     <p>Harap baca syarat dan ketentuan ini dengan seksama sebelum menggunakan Layanan Kami.</p><br/>
-                    <p>Kami Dark Clue Music (DCM) Penyedia layanan dari alat berbasis online yang kami buat untuk digunakan dengan bijak, semua alat berbasis online yang kami sajikan sepenuhnya gratis tidak akan ada langganan untuk fitur apapun harap ditekankan kembali tujuan kami untuk menjalin pertemanan baik serta saling membantu/mendukung antar musisi dalam/luar negri.</p><br/>
+                    <p>Kami Dark Clue Music (DCM) Penyedia layanan dari alat berbasis online yang kami buat untuk digunakan dengan bijak, semua alat berbasis online yang kami sajikan sepenuhnya gratis tidak akan ada langganan untuk fitur apapun harap ditekankan kembali tujuan kami untuk mengenalkan/mempromosikan musik dengan lirik dalam/luar negri.</p><br/>
                     <p>Alat berbasis online kami di antaranya :</p>
                     <ul>
                         <li><a title="Pembuat Lirik" href="#pembuatlirik">Pembuat Lirik</a></li>
