--- a/index.html
+++ b/index.html
@@ -67,23 +67,23 @@
                     <h1>Syarat & Ketentuan</h1>
                     <p>Terakhir diperbarui: October 02, 2024</p><br/>
                     <p>Harap baca syarat dan ketentuan ini dengan seksama sebelum menggunakan Layanan Kami.</p><br/>
-                    <p>Kami Dark Clue Music (DCM) Penyedia layanan dari alat berbasis online yang kami buat untuk digunakan dengan bijak, semua alat berbasis online yang kami sajikan sepenuhnya gratis tidak akan ada langganan untuk fitur apapun harap ditekankan kembali tujuan kami untuk mengenalkan/mempromosikan musik dengan lirik dalam/luar negri.</p><br/>
-                    <p>Alat berbasis online kami di antaranya :</p>
+                    <p>Kami Dark Clue Music (DCM) Penyedia layanan dari alat berbasis webapp yang kami buat untuk digunakan dengan bijak, semua alat berbasis webapp yang kami sajikan sepenuhnya gratis tidak akan ada langganan untuk fitur apapun harap ditekankan kembali tujuan kami untuk mengenalkan/mempromosikan musik dengan lirik dalam/luar negri.</p><br/>
+                    <p>Alat berbasis webapp kami di antaranya :</p>
                     <ul>
                         <li><a title="Pembuat Lirik" href="#pembuatlirik">Pembuat Lirik</a></li>
                         <li><a title="JSON Ke LRC" href="#jsonkelrc">JSON Ke LRC</a></li>
                         <li><a title="DCM Player" href="#dcmplayer">DCM Player</a></li>
                     </ul>
                     <h1 id="pembuatlirik">Pembuat Lirik</h1><br/>
-                    <p>Pembuat Lirik merupakan alat berbasis online yang kami buat untuk membantu/mempermudah pengguna/musisi untuk membuat file lyrics berbahasa pemrograman JSON, ini berfungsi untuk menampilkan lirik di <a title="DCM Player" href="#dcmplayer">DCM Player</a>. Pengguna juga dapat mengkonversikannya menjadi file dengan format .lrc <a title="JSON Ke LRC" href="#jsonkelrc">disini</a>.</p><br/>
+                    <p>Pembuat Lirik merupakan alat berbasis webapp yang kami buat untuk membantu/mempermudah pengguna/musisi untuk membuat file lyrics berbahasa pemrograman JSON, ini berfungsi untuk menampilkan lirik di <a title="DCM Player" href="#dcmplayer">DCM Player</a>. Pengguna juga dapat mengkonversikannya menjadi file dengan format .lrc <a title="JSON Ke LRC" href="#jsonkelrc">disini</a>.</p><br/>
                     <h1 id="jsonkelrc">JSON Ke LRC</h1><br/>
-                    <p>JSON Ke LRC merupakan alat berbasis online yang kami buat untuk mengkonversikan text json menjadi format file .lrc, Pengguna dapat menggunakannya di musik player offline yang mendukung file .lrc sebagai lirik pada lagu.</p><br/>
+                    <p>JSON Ke LRC merupakan alat berbasis webapp yang kami buat untuk mengkonversikan text json menjadi format file .lrc, Pengguna dapat menggunakannya di musik player offline yang mendukung file .lrc sebagai lirik pada lagu.</p><br/>
                     <h1 id="dcmplayer">DCM Player</h1><br/>
                     <p>DCM Player adalah wadah musik yang di bagikan oleh pengguna untuk pengguna atau pengunjung lainnya, seperti player musik pada umumnya DCM Player memiliki kontrol musik yang sama, DCM Player mengunggulkan musik yang menampilkan lirik selain itu pengguna dapat dengan bebas mengubah/mangatur tampilan sesuai dengan apa yang sudah disediakan contoh mengganti latar dengan foto atau warna, mengunggah musik dll. Untuk mendapatkan fitur tersebut pengguna harus membuat akun dan mentaati aturan yang ada seperti, tidak mengakui hak cipta karya musik seseorang, mengarang lirik berbeda dari versi aslinya dan lain sebagainya yang dapat merugikan orang lain (Hukum berlaku secara personal).</p><br/>
                     <h1>Taat Hukum</h1><br/>
                     <p>Dark Clue Music (DCM) sangat taat/tunduk dengan hukum yang berlaku di negara, khususnya negara kami Indonesia. Selepas dari itu kami akan selalu mengingatkan tentang UUD 1945, Pasal 28.</p><br/>
                     <h1>Hukuman</h1><br/>
-                    <p>Kami memiliki cara tersendiri untuk menghukum pengguna yang menyalahgunakan alat berbasis online kami seperti misal pengguna mengakui hak cipta karya/musik orang lain, dengan tegas kami akan memblokir pengguna dan menghapus lagu serta memberikan informasi yang dicatat tentang pengguna ke pemilik/pihak yang merasa dirugikan.</p>
+                    <p>Kami memiliki cara tersendiri untuk menghukum pengguna yang menyalahgunakan alat berbasis webapp (DCM Player) kami seperti misal pengguna mengakui hak cipta karya/musik orang lain, dengan tegas kami akan memblokir pengguna dan menghapus lagu serta memberikan informasi yang dicatat tentang pengguna ke pemilik/pihak yang merasa dirugikan.</p>
                 </div>              
             </article>
         </main>
