--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="msection">
                     <h1>Syarat & Ketentuan</h1>
-                    <p>Terakhir diperbarui: October 02, 2024</p><br/>
+                    <p>Terakhir diperbarui: October 04, 2024</p><br/>
                     <p>Harap baca syarat dan ketentuan ini dengan seksama sebelum menggunakan Layanan Kami.</p><br/>
                     <p>Kami Dark Clue Music (DCM) Penyedia layanan dari alat berbasis webapp yang kami buat untuk digunakan dengan bijak, semua alat berbasis webapp yang kami sajikan sepenuhnya gratis tidak akan ada langganan untuk fitur apapun harap ditekankan kembali tujuan kami untuk mengenalkan/mempromosikan musik dengan lirik dalam/luar negri.</p><br/>
                     <p>Alat berbasis webapp kami di antaranya :</p>
@@ -82,8 +82,26 @@
                     <p>DCM Player adalah wadah musik yang di bagikan oleh pengguna untuk pengguna atau pengunjung lainnya, seperti player musik pada umumnya DCM Player memiliki kontrol musik yang sama, DCM Player mengunggulkan musik yang menampilkan lirik selain itu pengguna dapat dengan bebas mengubah/mangatur tampilan sesuai dengan apa yang sudah disediakan contoh mengganti latar dengan foto atau warna, mengunggah musik dll. Untuk mendapatkan fitur tersebut pengguna harus membuat akun dan mentaati aturan yang ada seperti, tidak mengakui hak cipta karya musik seseorang, mengarang lirik berbeda dari versi aslinya dan lain sebagainya yang dapat merugikan orang lain (Hukum berlaku secara personal).</p><br/>
                     <h1>Taat Hukum</h1><br/>
                     <p>Dark Clue Music (DCM) sangat taat/tunduk dengan hukum yang berlaku di negara, khususnya negara kami Indonesia. Selepas dari itu kami akan selalu mengingatkan tentang UUD 1945, Pasal 28.</p><br/>
-                    <h1>Hukuman</h1><br/>
-                    <p>Kami memiliki cara tersendiri untuk menghukum pengguna yang menyalahgunakan alat berbasis webapp (DCM Player) kami seperti misal pengguna mengakui hak cipta karya/musik orang lain, dengan tegas kami akan memblokir pengguna dan menghapus lagu serta memberikan informasi yang dicatat tentang pengguna ke pemilik/pihak yang merasa dirugikan.</p>
+                    <h1>Hukum (DCM)</h1><br/>
+                    <p>Untuk Pengguna & Mengunggah Musik</p>
+                    <ul>
+                        <li>Pengguna tidak boleh mengakui hak cipta karya musik orang lain.</li>
+                        <li>Pengguna harus mengikuti tata cara yang sudah kami sediakan.</li>
+                        <li>Kami akan memblokir pengguna dan menghapus lagu serta memberikan informasi yang dicatat tentang pengguna ke pemilik/pihak yang merasa dirugikan.</li>
+                    </ul>
+                    <p>Hak Cipta Alat Berbasis WebApp</p>
+                    <ul>
+                        <li><a title="Pembuat Lirik" href="https://darkcluemusic.github.io/lyrics-maker/">Pembuat Lirik</a> source ini sepenuhnya dibuat dan dikembangkan oleh Suryo DwiJayanto.</li>
+                        <li><a title="JSON Ke LRC" href="https://darkcluemusic.github.io/json-to-lrc/">JSON Ke LRC</a> source ini sepenuhnya dibuat dan dikembangkan oleh Suryo DwiJayanto.</li>
+                        <li><a title="DCM Player" href="https://darkcluemusic.github.io/dcmplayer/">DCM Player</a> source ini sepenuhnya dibuat dan dikembangkan oleh Suryo DwiJayanto.</li>
+                        <li>Hubungi <a title="Suryo DwiJayanto" href="mailto:iyortml@gmail.com">Suryo DwiJayanto</a> untuk informasi alat yang dibuat dan dikembangkan.</li>
+                    </ul>
+                    <p>Hak Cipta Musik DCM</p>
+                    <ul>
+                        <li>Dark Clue Music komposer Suryo DwiJayanto</li>
+                        <li>Deep Clue Music komposer Suryo DwiJayanto</li>
+                        <li>The Generate Music komposer Suryo DwiJayanto</li>
+                    </ul>
                 </div>              
             </article>
         </main>
